Deadlock in ConfigServerTestFixture::setUpAndInitializeConfigDb

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-11-18
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Scenario:

      T1 = main test thread
      T2 = DistLockPinger thread

      T1 calls ConfigServerTestFixture::setUpAndInitializeConfigDb.
      T1 acquired rstl in mode IX, and acquired config db in mode X.
      T2 tries to get config db in IX, successfully acquired rstl in mode IX but is blocked for db since T1 has it in mode X.
      T1 tries to upgrade rstl to mode X, gets blocked since T2 has it in mode IX.

      To reproduce, simply add a sleep after acquiring db in mode X.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: