SERVER-44526 fix RSTL deadlock in config server test fixture